# KohakuPaper

./: .gitignore  README.md  pyproject.toml
src/kohaku-paper-web/src/: components.d.ts
src/kohaku-paper-web/src/pages/: index.vue
src/kohaku-paper-web/src/utils/: api.js
src/kohakupaper/: cli.py  database.py  paperlist_sync.py
src/kohakupaper/api/routes/: papers.py  sync.py
